# DESIGN-study

./: README.md
week1/: emitter.py  main.py  run.sh  test.py
week2/: main.py  provider_test.py  pyproject.toml  request_test.py
week2/cats/: controller.py  entity.py  module.py  service.py
week2/nestpy/: README.md
week2/nestpy/common/: Controller.py  Injectable.py  Method.py  Module.py  Request.py  __init__.py
week2/nestpy/core/: Command.py  NestFactory.py  Strategy.py  __init__.py
week3/: README.md  editor.js  index.html  main_test.go  styles.css
week3/barging/: main_test.go
week4/: go.mod  main.go
week4/barging/: main.go
