[tool.poetry]
name = "week2"
version = "0.1.0"
description = ""
authors = ["Donghun Ha <donghun.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
